# imstudios-ai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  TODO.md  compose.yaml  config.example.yaml  config.template.yaml  discloud.config  docker-compose.yml  dokploy.yaml  drizzle.config.ts  package.json  pyproject.toml  renovate.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  docker.yml
docs/: README.md  coolify.md  dokploy.md  local.md  providers.md  pterodactyl.md  setup.md
src/: index.ts
src/ai/: provider.ts  summary.ts  types.ts
src/bot/: __main__.py  config.py  main.py  search.py
src/bot/providers/: __init__.py  anthropic.py  google.py  huggingface.py  openai_compat.py
src/config/: loader.ts  types.ts
src/db/: index.ts
src/db/schema/: guilds.ts  index.ts  messages.ts  threads.ts
src/gateway/: index.ts
src/lib/: auto-title.ts  concurrency-lock.ts  discord-rest.ts  memory-store.ts  message-chunker.ts  rate-limiter.ts  redis.ts  search.ts
src/queue/: index.ts  publisher.ts  types.ts  worker.ts
src/setup/: commands.ts  index.ts  logger.ts  settings.ts  types.ts
