[project]
name = "huggingface-discord-bot"
version = "1.1.0"
description = "A Discord bot powered by multiple LLM providers (HuggingFace, OpenRouter, Gemini, Claude, Grok, ChatGPT)"
authors = [{ name = "itzzmateo" }]
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.4",
    "huggingface-hub>=0.26",
    "pyyaml>=6.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
]

[project.scripts]
bot = "bot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
